[package]
name = "mini-v8"
version = "0.2.1"
authors = ["Skyler Lipthay <sl@skylerlipthay.com>"]
repository = "https://github.com/SkylerLipthay/mini-v8"
edition = "2018"
license = "MIT"
description = "A minimal embedded V8 JavaScript engine wrapper for Rust"

[dev-dependencies]
ansi_term = "0.12"
rustyline = "5.0"

[build-dependencies]
cc = "1.0"
