[package]
name = "mini-v8"
version = "0.4.0"
authors = ["Skyler Lipthay <sl@skylerlipthay.com>"]
repository = "https://github.com/SkylerLipthay/mini-v8"
readme = "README.md"
edition = "2021"
license = "MIT"
description = "A minimal embedded V8 JavaScript engine wrapper for Rust"

[dev-dependencies]
ansi_term = "0.12"
rustyline = "5.0"

[dependencies]
v8 = "0.75.1"
